--- a/src/Andy.X.MSSQL.Source.Connector.IO/Andy.X.MSSQL.Source.Connector.IO.csproj
+++ b/src/Andy.X.MSSQL.Source.Connector.IO/Andy.X.MSSQL.Source.Connector.IO.csproj
@@ -6,4 +6,18 @@
     <Nullable>enable</Nullable>
   </PropertyGroup>
 
+  <ItemGroup>
+    <None Remove="templates\ms-sql\csharp_sql_dbworker.cstemp" />
+    <None Remove="templates\ms-sql\sql_modelgen.sql" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <Content Include="templates\ms-sql\csharp_sql_dbworker.cstemp">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Content>
+    <Content Include="templates\ms-sql\sql_modelgen.sql">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Content>
+  </ItemGroup>
+
 </Project>
