--- a/src/Andy.X.MSSQL.Source.Connector/Andy.X.MSSQL.Source.Connector.csproj
+++ b/src/Andy.X.MSSQL.Source.Connector/Andy.X.MSSQL.Source.Connector.csproj
@@ -5,4 +5,8 @@
     <TargetFramework>net7.0</TargetFramework>
   </PropertyGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\Andy.X.MSSQL.Source.Connector.Core\Andy.X.MSSQL.Source.Connector.Core.csproj" />
+  </ItemGroup>
+
 </Project>
