--- a/src/Andy.X.MSSQL.Source.Connector.Core/Andy.X.MSSQL.Source.Connector.Core.csproj
+++ b/src/Andy.X.MSSQL.Source.Connector.Core/Andy.X.MSSQL.Source.Connector.Core.csproj
@@ -1,22 +1,30 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
-  <PropertyGroup>
-    <TargetFramework>net7.0</TargetFramework>
-    <ImplicitUsings>enable</ImplicitUsings>
-    <Nullable>enable</Nullable>
-  </PropertyGroup>
+	<PropertyGroup>
+		<TargetFramework>net7.0</TargetFramework>
+		<ImplicitUsings>enable</ImplicitUsings>
+		<Nullable>enable</Nullable>
 
-  <ItemGroup>
-    <PackageReference Include="Buildersoft.Andy.X.Client" Version="3.0.0" />
-    <PackageReference Include="Microsoft.CodeAnalysis.CSharp" Version="4.4.0" />
-	  <PackageReference Include="SqlTableDependency" Version="8.5.8" />
-    <PackageReference Include="System.Data.SqlClient" Version="4.8.5" />
-	  <PackageReference Include="System.Collections" Version="4.3.0" />
-	  <PackageReference Include="System.Runtime.Loader" Version="4.3.0" />
-  </ItemGroup>
+		<Version>3.0.0</Version>
+		<Company>Buildersoft</Company>
+		<Product>Buildersoft Andy</Product>
+		<Authors>Buildersoft</Authors>
+		<Description>Buildersoft Andy X is a distributed messaging system. This system will empower developers to move into Event Driven Systems. Andy X is a multi-tenant system.</Description>
+		<Copyright>Copyright © Buildersoft 2022</Copyright>
 
-  <ItemGroup>
-    <ProjectReference Include="..\Andy.X.MSSQL.Source.Connector.IO\Andy.X.MSSQL.Source.Connector.IO.csproj" />
-  </ItemGroup>
+	</PropertyGroup>
+
+	<ItemGroup>
+		<PackageReference Include="Buildersoft.Andy.X.Client" Version="3.0.0" />
+		<PackageReference Include="Microsoft.CodeAnalysis.CSharp" Version="4.4.0" />
+		<PackageReference Include="SqlTableDependency" Version="8.5.8" />
+		<PackageReference Include="System.Data.SqlClient" Version="4.8.5" />
+		<PackageReference Include="System.Collections" Version="4.3.0" />
+		<PackageReference Include="System.Runtime.Loader" Version="4.3.0" />
+	</ItemGroup>
+
+	<ItemGroup>
+		<ProjectReference Include="..\Andy.X.MSSQL.Source.Connector.IO\Andy.X.MSSQL.Source.Connector.IO.csproj" />
+	</ItemGroup>
 
 </Project>
