--- a/src/Andy.X.MSSQL.Source.Connector/Andy.X.MSSQL.Source.Connector.csproj
+++ b/src/Andy.X.MSSQL.Source.Connector/Andy.X.MSSQL.Source.Connector.csproj
@@ -1,12 +1,26 @@
 <Project Sdk="Microsoft.NET.Sdk">
 
-  <PropertyGroup>
-    <OutputType>Exe</OutputType>
-    <TargetFramework>net7.0</TargetFramework>
-  </PropertyGroup>
+	<PropertyGroup>
+		<OutputType>Exe</OutputType>
+		<TargetFramework>net7.0</TargetFramework>
+		<DockerDefaultTargetOS>Linux</DockerDefaultTargetOS>
+		<DockerfileContext>..\..</DockerfileContext>
+		
+		<Version>3.0.0</Version>
+		<Company>Buildersoft</Company>
+		<Product>Buildersoft Andy</Product>
+		<Authors>Buildersoft</Authors>
+		<Description>Buildersoft Andy X is a distributed messaging system. This system will empower developers to move into Event Driven Systems. Andy X is a multi-tenant system.</Description>
+		<Copyright>Copyright © Buildersoft 2022</Copyright>
+		
+	</PropertyGroup>
 
-  <ItemGroup>
-    <ProjectReference Include="..\Andy.X.MSSQL.Source.Connector.Core\Andy.X.MSSQL.Source.Connector.Core.csproj" />
-  </ItemGroup>
+	<ItemGroup>
+		<PackageReference Include="Microsoft.VisualStudio.Azure.Containers.Tools.Targets" Version="1.17.0" />
+	</ItemGroup>
+
+	<ItemGroup>
+		<ProjectReference Include="..\Andy.X.MSSQL.Source.Connector.Core\Andy.X.MSSQL.Source.Connector.Core.csproj" />
+	</ItemGroup>
 
 </Project>
